--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="gallery-single fix">
             <!-- Image linking to GitHub repository -->
             <a href="https://github.com/sschintuz/CookieCat-A-slash-B-Testing" target="_blank">
-                <img src="uploads/cookie_cat.jpeg" class="img-fluid" alt="Cookie Cat Game">
+                <img src="uploads/cookie cat.jpeg" class="img-fluid" alt="Cookie Cat Game">
             </a>
             
             <!-- Overlay -->
