--- a/index.html
+++ b/index.html
@@ -142,24 +142,25 @@
     <span>Download CV</span>
 </a>
 
-                </div><!-- end messagebox -->
-            </div><!-- end col -->
+         </div><!-- end messagebox -->
+</div><!-- end col -->
 
-            <div class="col-md-6">
-                <div class="right-box-pro wow fadeIn">
-                    <img src="uploads/CSSPicture.png" alt="" class="img-fluid img-rounded">
-                </div><!-- end media -->
-            </div><!-- end col -->
-        </div><!-- end row -->
-    </div><!-- end container -->
-</div><!-- end section -->	
+<div class="col-md-6">
+    <div class="right-box-pro wow fadeIn">
+        <img src="uploads/CSSPicture.png" alt="" class="img-fluid img-rounded">
+    </div><!-- end media -->
+</div><!-- end col -->
+</div><!-- end row -->
+</div><!-- end container -->
+</div><!-- end section -->    
 
 <div id="portfolio" class="section lb">
     <div class="container">
         <div class="section-title text-left">
             <h3>Projects</h3>
-            <p><strong><strong></strong>Here is a collection of projects I have completed, encompassing both academic and self-initiated endeavors<strong></strong>.</p>
+            <p><strong>Here is a collection of projects I have completed, encompassing both academic and self-initiated endeavors.</strong></p>
         </div><!-- end title -->
+
 			
 			<div class="gallery-menu row">
 				<div class="col-md-12">
