--- a/index.html
+++ b/index.html
@@ -128,28 +128,30 @@
             M85 100 Q 90 50 95 100
             M90 100 Q 95 25 100 100
             M95 100 Q 100 15 105 100 Z">
-        </path>
-    </svg>
+</path>
+</svg>
 <div id="about" class="section wb">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
                 <div class="message-box">                        
                    <h2>About Me</h2>
-<p><strong><b></b>With over a decade of experience, I've honed my skills in data analytics and insights generation, specializing in SQL, PowerBI, Tableau, and Python. In various roles across software development and the banking sector, I've led initiatives in process automation, business development, and operations efficiency.</strong></p>
-<p><strong>My passion lies in leveraging data to revolutionize our world, driving transformative changes through advanced analytics, data science, and machine learning.</strong><b></p>
-<a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
-    <span>Download CV</span>
-</a>
+                   <p><strong>With over a decade of experience, I've honed my skills in data analytics and insights generation, specializing in SQL, Power BI, Tableau, and Python. In various roles across software development and the banking sector, I've led initiatives in process automation, business development, and operations efficiency.</strong></p>
+                   <p><strong>My passion lies in leveraging data to revolutionize our world, driving transformative changes through advanced analytics, data science, and machine learning.</strong></p>
+                   <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
+                        <span>Download CV</span>
+                   </a>
+                </div><!-- end messagebox -->
+            </div><!-- end col -->
 
-         </div><!-- end messagebox -->
-</div><!-- end col -->
-
-<div class="col-md-6">
-    <div class="right-box-pro wow fadeIn">
-        <img src="uploads/CSSPicture.png" alt="" class="img-fluid img-rounded">
-    </div><!-- end media -->
-</div><!-- end col -->
+            <div class="col-md-6">
+                <div class="right-box-pro wow fadeIn">
+                    <img src="uploads/CSSPicture.png" alt="" class="img-fluid img-rounded">
+                </div><!-- end media -->
+            </div><!-- end col -->
+        </div><!-- end row -->
+    </div><!-- end container -->
+</div><!-- end section -->
 
 <div id="portfolio" class="section lb">
     <div class="container">
