--- a/index.html
+++ b/index.html
@@ -182,4 +182,71 @@
 
     <div class="gallery-list row">
         <!-- Example Gallery Item -->
-        <div class="col-md-
+        <div class="col-md-4 col-sm-6 gal_a">
+            <div class="gallery-item">
+                <div class="hover-bg">
+                    <a href="uploads/FacialRecognition.png" title="Facial Recognition Technology Using Computer Vision Model" data-lightbox="example-set" data-title="Facial Recognition Technology Using Computer Vision Model">
+                        <div class="hover-text">
+                            <h4>Facial Recognition Technology</h4>
+                            <small>Enhanced access efficiency through computer vision.</small>
+                        </div>
+                        <img src="uploads/FacialRecognition.png" class="img-fluid" alt="Gallery Image">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- Repeat similar blocks for other projects -->
+
+    </div>
+
+    <div id="contact" class="section wb">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Get in Touch</h2>
+                    <p><strong>I'd love to hear from you! Whether you have a question, a project proposal, or just want to connect, feel free to reach out.</strong></p>
+                </div>
+                <div class="col-md-6">
+                    <form id="contact-form" action="" method="post">
+                        <div class="form-group">
+                            <input type="text" class="form-control" name="name" placeholder="Name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" name="email" placeholder="Email" required>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                        </div>
+                        <button type="submit" class="sim-btn btn-hover-new" data-text="Send Message">
+                            <span>Send Message</span>
+                        </button>
+                    </form>
+                </div><!-- end col -->
+                <div class="col-md-6">
+                    <div class="contact-info">
+                        <h3>Contact Info</h3>
+                        <p><strong>Email:</strong> <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+                        <p><strong>Phone:</strong> +1 234 567 890</p>
+                    </div>
+                </div><!-- end col -->
+            </div><!-- end row -->
+        </div><!-- end container -->
+    </div><!-- end section -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <p>&copy; 2024 Satya Crafts. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Javascript -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/lightbox.min.js"></script>
+    <script src="js/main.js"></script>
+</body>
+
+</html>
