--- a/index.html
+++ b/index.html
@@ -2,39 +2,22 @@
 <html lang="en">
 
 <head>
-    <!-- Basic -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-    <!-- Site Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Satya Crafts</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Site CSS -->
     <link rel="stylesheet" href="style.css">
-    <!-- Responsive CSS -->
     <link rel="stylesheet" href="css/responsive.css">
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
-    <script src="js/modernizr.js"></script> <!-- Modernizr -->
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="js/modernizr.js"></script>
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <!-- Font Awesome for Icons -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body id="page-top" class="politics_version">
@@ -44,49 +27,34 @@
         <div id="main-ld">
             <div id="loader"></div>
         </div>
-    </div><!-- end loader -->
-    <!-- END LOADER -->
+    </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-
-            <!-- Social Media Links on the Left -->
             <div class="navbar-socials d-flex align-items-center">
                 <a href="https://www.linkedin.com/in/sschintu/" target="_blank" class="mr-3" style="color: red;">
-                    <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-linkedin fa-2x"></i>
                 </a>
                 <a href="https://github.com/sschintuz" target="_blank" class="mr-3" style="color: red;">
-                    <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-github fa-2x"></i>
                 </a>
                 <a href="https://medium.com/@schintu" target="_blank" style="color: red;">
-                    <i class="fa fa-medium fa-2x" aria-hidden="true"></i>
+                    <i class="fa fa-medium fa-2x"></i>
                 </a>
             </div>
-
-            <!-- Brand and Toggler -->
             <a class="navbar-brand js-scroll-trigger" href="#page-top">Satya Crafts</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fa fa-bars"></i>
             </button>
-
-            <!-- Navigation Links -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger active" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Connect</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger active" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Connect</a></li>
                 </ul>
             </div>
         </div>
@@ -108,95 +76,50 @@
         </div>
     </section>
 
-    <svg id="clouds" class="hidden-xs" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
-        viewBox="0 0 85 100" preserveAspectRatio="none">
-        <path d="M-5 100 Q 0 20 5 100 Z
-            M0 100 Q 5 0 10 100
-            M5 100 Q 10 30 15 100
-            M10 100 Q 15 10 20 100
-            M15 100 Q 20 30 25 100
-            M20 100 Q 25 -10 30 100
-            M25 100 Q 30 10 35 100
-            M30 100 Q 35 30 40 100
-            M35 100 Q 40 10 45 100
-            M40 100 Q 45 50 50 100
-            M45 100 Q 50 20 55 100
-            M50 100 Q 55 40 60 100
-            M55 100 Q 60 60 65 100
-            M60 100 Q 65 50 70 100
-            M65 100 Q 70 20 75 100
-            M70 100 Q 75 45 80 100
-            M75 100 Q 80 30 85 100
-            M80 100 Q 85 20 90 100
-            M85 100 Q 90 50 95 100
-            M90 100 Q 95 25 100 100
-            M95 100 Q 100 15 105 100 Z">
-        </path>
-    </svg>
-
     <div id="about" class="section wb">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">
                         <h2>About Me</h2>
-                        <p><strong>With over a decade of experience, I've honed my skills in data analytics and insights generation, specializing in SQL, Power BI, Tableau, and Python. In various roles across software development and the banking sector, I've led initiatives in process automation, business development, and operations efficiency.</strong></p>
-                        <p><strong>My passion lies in leveraging data to revolutionize our world, driving transformative changes through advanced analytics, data science, and machine learning.</strong></p>
-                        <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
+                        <p><strong>With over a decade of experience, I've honed my skills in data analytics and insights generation, specializing in SQL, Power BI, Tableau, and Python.</strong></p>
+                        <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" download target="_blank">
                             <span>Download CV</span>
                         </a>
-                    </div><!-- end messagebox -->
-                </div><!-- end col -->
-
+                    </div>
+                </div>
                 <div class="col-md-6">
                     <div class="right-box-pro wow fadeIn">
                         <img src="uploads/CSSPicture.png" alt="" class="img-fluid img-rounded">
-                    </div><!-- end media -->
-                </div><!-- end col -->
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div id="portfolio" class="section lb">
         <div class="container">
             <div class="section-title text-left">
                 <h3>Projects</h3>
-                <p><strong>Here is a collection of projects I have completed, encompassing both academic and self-initiated endeavors.</strong></p>
-            </div><!-- end title -->
-        </div><!-- end container -->
-    </div><!-- end section -->
-
-    <div class="gallery-menu row">
-        <div class="col-md-12">
-            <div class="button-group filter-button-group text-left">
-                <button class="active" data-filter="*">All</button>
-                <button data-filter=".gal_c">Business & Data Analysis</button>
-                <button data-filter=".gal_a">Data Science & Machine Learning</button>
-                <button data-filter=".gal_b">NLP</button>
-                <button data-filter=".gal_c">Deep Learning & Computer Vision</button>
-                <button data-filter=".gal_c">Credit & Quantitative Risk Modeling</button>
-                <button data-filter=".gal_c">Business Intelligence</button>
+                <p><strong>Here is a collection of projects I have completed.</strong></p>
             </div>
         </div>
-    </div>
-
-    <div class="gallery-list row">
-        <!-- Example Gallery Item -->
-        <div class="col-md-4 col-sm-6 gal_a">
-            <div class="gallery-item">
-                <div class="hover-bg">
-                    <a href="uploads/FacialRecognition.png" title="Facial Recognition Technology Using Computer Vision Model" data-lightbox="example-set" data-title="Facial Recognition Technology Using Computer Vision Model">
-                        <div class="hover-text">
-                            <h4>Facial Recognition Technology</h4>
-                            <small>Enhanced access efficiency through computer vision.</small>
-                        </div>
-                        <img src="uploads/FacialRecognition.png" class="img-fluid" alt="Gallery Image">
-                    </a>
+        <div class="gallery-list row">
+            <div class="col-md-4 col-sm-6 gal_a">
+                <div class="gallery-item">
+                    <div class="hover-bg">
+                        <a href="uploads/FacialRecognition.png" title="Facial Recognition Technology Using Computer Vision Model" data-lightbox="example-set">
+                            <div class="hover-text">
+                                <h4>Facial Recognition Technology</h4>
+                                <small>Enhanced access efficiency through computer vision.</small>
+                            </div>
+                            <img src="uploads/FacialRecognition.png" class="img-fluid" alt="Gallery Image">
+                        </a>
+                    </div>
                 </div>
             </div>
+            <!-- Repeat similar blocks for other projects -->
         </div>
-        <!-- Repeat similar blocks for other projects -->
-
     </div>
 
     <div id="contact" class="section wb">
@@ -217,23 +140,22 @@
                         <div class="form-group">
                             <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                         </div>
-                        <button type="submit" class="sim-btn btn-hover-new" data-text="Send Message">
+                        <button type="submit" class="sim-btn btn-hover-new">
                             <span>Send Message</span>
                         </button>
                     </form>
-                </div><!-- end col -->
+                </div>
                 <div class="col-md-6">
                     <div class="contact-info">
                         <h3>Contact Info</h3>
                         <p><strong>Email:</strong> <a href="mailto:youremail@example.com">youremail@example.com</a></p>
                         <p><strong>Phone:</strong> +1 234 567 890</p>
                     </div>
-                </div><!-- end col -->
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -242,7 +164,6 @@
         </div>
     </footer>
 
-    <!-- Javascript -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/lightbox.min.js"></script>
