--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="col-md-6">
                 <div class="message-box">                        
                    <h2>About Me</h2>
-                   <p><strong>With over a decade of experience, I've honed my skills in data analytics and insights generation, specializing in SQL, Power BI, Tableau, and Python. In various roles across software development and the banking sector, I've led initiatives in process automation, business development, and operations efficiency.</strong></p>
+                   <p><strong>With extensive experience, I've honed my skills in data analytics and insights generation, specializing in SQL, Power BI, Tableau, and Python. In various roles across software development and the banking sector, I've led initiatives in process automation, business development, and operations efficiency.</strong></p>
                    <p><strong>My passion lies in leveraging data to revolutionize our world, driving transformative changes through advanced analytics, data science, and machine learning.</strong></p>
                    <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
                         <span>Download CV</span>
