--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
             <div class="col-md-6">
                 <div class="message-box">                        
                    <h2>About Me</h2>
-                   <p><strong>With extensive experience, I've honed my skills in data analytics and insights generation, specializing in SQL, Power BI, Tableau, and Python. In various roles across software development and the banking sector, I've led initiatives in process automation, business development, and operations efficiency.</strong></p>
-                   <p><strong>My passion lies in leveraging data to revolutionize our world, driving transformative changes through advanced analytics, data science, and machine learning.</strong></p>
+                  <p><strong>As a seasoned data engineer, I excel in designing robust data infrastructures and optimizing data pipelines. With expertise in SQL, ETL, data warehousing, and big data technologies, I bridge complex systems with actionable insights. My passion lies in architecting scalable solutions that revolutionize decision-making through efficient data models, advanced analytics, and machine learning. Committed to driving operational efficiency and enabling data-driven transformations across industries.</strong></p>
                    <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
                         <span>Download CV</span>
                    </a>
