--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			  With expertise in SQL, ETL, data warehousing, and big data technologies, I bridge complex systems with actionable insights. 
 			  My passion lies in architecting scalable solutions that revolutionize decision-making through efficient data models, advanced analytics, and machine learning. 
 			  Committed to driving operational efficiency and enabling data-driven transformations across industries.</strong></p>
-                   <a href="uploads/SatyaSandeepChintu_Resume.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
+                   <a href="uploads/SatyaSandeepChintu" class="sim-btn btn-hover-new" data-text="Download CV" download target="_blank">
                         <span>Download CV</span>
                    </a>
                 </div><!-- end messagebox -->
