--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
         <h2 style="color: white;">Passionate and result-driven</h2>
         <h3 class="cd-headline clip is-full-width">
             <span class="cd-words-wrapper">
-                <b class="is-visible">Business Analyst</b>
+                <b class="is-visible">Data Engineer</b>
                 <b>Data Scientist</b>
                 <b>Machine Learning Engineer</b>
-                <b>Product Manager</b>
             </span>
         </h3>
     </div>
